--- a/01-Ramp_Up/02-Python/01-Python/1-Basics/Teoria/Basics II.ipynb
+++ b/01-Ramp_Up/02-Python/01-Python/1-Basics/Teoria/Basics II.ipynb
@@ -64,9 +64,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'float'>\n",
+      "100.0\n",
+      "10000000000.0\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "var_int = 10\n",
     "var_float = 10.0\n",
@@ -93,9 +104,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conmutativa\n",
+      "6\n",
+      "6\n",
+      "\n",
+      "Asociativa\n",
+      "16\n",
+      "16\n",
+      "\n",
+      "Distributiva\n",
+      "30\n",
+      "30\n",
+      "\n",
+      "El Orden de operaciones se mantiene. Siempre podemos usar paréntesis\n",
+      "50\n",
+      "19\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Conmutativa\")\n",
     "print(2 * 3)\n",
@@ -131,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,9 +173,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "4.0\n",
+      "4.0\n",
+      "1.5707963267948966\n"
+     ]
+    }
+   ],
    "source": [
     "print(math.sqrt(25))\n",
     "print(math.fabs(-4))\n",
@@ -152,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,18 +232,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub\\DS_PT_09_2023\\01-Ramp_Up\\02-Python\\01-Python\\1-Basics\\Teoria\\Basics II.ipynb Cell 15\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/01-Ramp_Up/02-Python/01-Python/1-Basics/Teoria/Basics%20II.ipynb#X20sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m4\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m0\u001b[39;49m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
    "source": [
     "4/0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "math domain error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub\\DS_PT_09_2023\\01-Ramp_Up\\02-Python\\01-Python\\1-Basics\\Teoria\\Basics II.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/01-Ramp_Up/02-Python/01-Python/1-Basics/Teoria/Basics%20II.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m math\u001b[39m.\u001b[39;49msqrt(\u001b[39m-\u001b[39;49m\u001b[39m10\u001b[39;49m)\n",
+      "\u001b[1;31mValueError\u001b[0m: math domain error"
+     ]
+    }
+   ],
    "source": [
     "math.sqrt(-10)"
    ]
@@ -228,9 +296,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25.0\n",
+      "4\n",
+      "5\n",
+      "3.141592653589793\n",
+      "28.274333882308138\n"
+     ]
+    }
+   ],
    "source": [
     "print(math.fabs(-25))\n",
     "print(math.floor(4.7))\n",
@@ -256,9 +336,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "x = 1\n",
     "\n",
@@ -275,9 +364,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"AAA\" == \"BBB\")\n",
     "print(\"AAA\" == \"AAA\")\n",
@@ -290,9 +391,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(True == 1)\n",
     "print(False == 0)\n",
@@ -321,9 +432,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "print(True == 6)\n",
     "print(True == \"verdadero\")\n",
@@ -332,18 +453,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'>' not supported between instances of 'float' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub\\DS_PT_09_2023\\01-Ramp_Up\\02-Python\\01-Python\\1-Basics\\Teoria\\Basics II.ipynb Cell 27\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/01-Ramp_Up/02-Python/01-Python/1-Basics/Teoria/Basics%20II.ipynb#X35sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39m1.0\u001b[39;49m \u001b[39m>\u001b[39;49m \u001b[39m\"\u001b[39;49m\u001b[39mtexto\u001b[39;49m\u001b[39m\"\u001b[39;49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: '>' not supported between instances of 'float' and 'str'"
+     ]
+    }
+   ],
    "source": [
     "1.0 > \"texto\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(1 > 0)\n",
     "print(1 > 2)\n",
@@ -373,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,9 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "Resultado:  False\n"
+     ]
+    }
+   ],
    "source": [
     "cond_ram1 = (ram1 == 16 or ram1 == 32 or ram1 == 64)\n",
     "print(cond_ram1)\n",
@@ -424,9 +579,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "print(process1 == \"i3\")\n",
     "print(disco1 == 500)"
@@ -441,9 +605,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resultado 2:  False\n",
+      "Resultado 3:  True\n"
+     ]
+    }
+   ],
    "source": [
     "cond_final2 = (ram2 == 16 or ram2 == 32 or ram2 == 64) and (process2 == \"i3\" and disco2 == 500) and (precio2 <=800)\n",
     "cond_final3 = (ram3 == 16 or ram3 == 32 or ram3 == 64) and (process3 == \"i3\" and disco3 == 500) and (precio3 <=800)\n",
@@ -485,9 +658,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "cond_final3 = (ram3 == 16 or ram3 == 32 or ram3 == 64) and (process3 == \"i3\" and disco3 == 500) and (precio3 <=800)\n",
     "cond_final3"
@@ -600,9 +784,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[17, 18, 21, 22, 25, 26, 29]\n",
+      "[29, 26, 25, 22, 21, 18, 17]\n",
+      "None\n",
+      "[29, 26, 25, 22, 21, 18, 17]\n"
+     ]
+    }
+   ],
    "source": [
     "temperaturas = [17,22,26,18,21,25,29]\n",
     "\n",
@@ -631,9 +826,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "STRING EN MAYUSCULAS\n",
+      "string en mayusculas\n",
+      "String en mayuSculaS\n",
+      "['string', 'en', 'mayusculas']\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "string_ejemplo = \"string en mayusculas\"\n",
     "\n",
@@ -672,11 +879,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "replace expected at least 2 arguments, got 0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub\\DS_PT_09_2023\\01-Ramp_Up\\02-Python\\01-Python\\1-Basics\\Teoria\\Basics II.ipynb Cell 52\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/01-Ramp_Up/02-Python/01-Python/1-Basics/Teoria/Basics%20II.ipynb#Y102sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m str_ejemplo \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mstring\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/0205301/OneDrive%20-%20SENER/Documentos/GitHub/DS_PT_09_2023/01-Ramp_Up/02-Python/01-Python/1-Basics/Teoria/Basics%20II.ipynb#Y102sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m str_ejemplo\u001b[39m.\u001b[39;49mreplace()\n",
+      "\u001b[1;31mTypeError\u001b[0m: replace expected at least 2 arguments, got 0"
+     ]
+    }
+   ],
    "source": [
     "str_ejemplo = \"string\"\n",
     "str_ejemplo.replace()"
@@ -696,9 +915,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, 1]\n"
+     ]
+    }
+   ],
    "source": [
     "numeros = [3,6,1]\n",
     "print(numeros)"
@@ -706,9 +933,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ponme', 'otra']\n",
+      "[True, False, True, True]\n",
+      "[4, 'diez', [True, 6], [], ['texto', 1, 55.78, True]]\n",
+      "5\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
    "source": [
     "list_string = [\"ponme\", \"otra\"]\n",
     "print(list_string)\n",
@@ -729,36 +968,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 'diez', [True, 6], [], ['texto', 1, 55.78, True]]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list_list[2][0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(list_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list_list[-1][-1]"
    ]
@@ -774,9 +1057,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(list_list)"
    ]
@@ -790,9 +1084,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(list_list)"
    ]
@@ -829,9 +1134,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "['Mates', 'Fisica', 'Mates', 'Ingles', 'Quimica']\n",
+      "3\n",
+      "2\n",
+      "None\n",
+      "[]\n"
+     ]
+    }
+   ],
    "source": [
     "asignaturas = [\"Mates\", \"Fisica\", \"Mates\", \"Ingles\"]\n",
     "\n",
@@ -866,9 +1184,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "['Infiltrados', 'Retorno del rey', 'Origen', 'Juego de tronos', 'Rick & Morty', 'Succession']\n"
+     ]
+    }
+   ],
    "source": [
     "pelis = ['Infiltrados', 'Retorno del rey', 'Origen']\n",
     "print(len(pelis))\n",
@@ -887,9 +1214,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Operaciones matemáticas\n",
+      "10\n",
+      "18\n",
+      "16\n",
+      "2.0\n",
+      "1\n",
+      "1024\n",
+      "5.0\n",
+      "\n",
+      "Operaciones comparativas\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "\n",
+      "Operaciones con booleanos\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "\n",
+      "Funciones built-in\n",
+      "FIN DEL NOTEBOOK\n",
+      "fin del notebook\n",
+      "Fin del nOtebOOk\n",
+      "Fin del ntebk\n",
+      "\n",
+      "Listas\n",
+      "['AC/DC', 'Metallica', 'Nirvana', 'Queen']\n"
+     ]
+    }
+   ],
    "source": [
     "# Operaciones matemáticas\n",
     "print(\"Operaciones matemáticas\")\n",
@@ -956,7 +1321,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.5"
   },
   "nbTranslate": {
    "displayLangs": [
