--- a/01-Ramp_Up/02-Python/01-Python/2-Flujos de control/Teoria/Flujos.ipynb
+++ b/01-Ramp_Up/02-Python/01-Python/2-Flujos de control/Teoria/Flujos.ipynb
@@ -268,6 +268,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sobresaliente\n"
+     ]
+    }
+   ],
+   "source": [
+    "mi_nota=9\n",
+    "if mi_nota <0 or mi_nota>10:\n",
+    "    print('Nota errónea')\n",
+    "elif mi_nota < 5:\n",
+    "    print(\"A septiembre\")\n",
+    "    # if type(mi_nota) == int:\n",
+    "    #     print(\"Es un entero\")\n",
+    "    # if type(mi_nota) == float:\n",
+    "    #     print(\"Es un float\")\n",
+    "    \n",
+    "elif mi_nota < 6:\n",
+    "    print(\"Suficiente\")\n",
+    "    \n",
+    "elif mi_nota < 7:\n",
+    "    print(\"Bien\")\n",
+    "    \n",
+    "elif mi_nota < 9:\n",
+    "    print(\"Notable\")\n",
+    "    \n",
+    "else:\n",
+    "    print(\"Sobresaliente\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -721,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,10 +767,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3\n",
+      "5 6\n",
+      "10 6\n",
+      "14 6\n",
+      "16 6\n",
+      "21 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, nota in enumerate(notas_clase):\n",
+    "    if nota%3==0:\n",
+    "        print(i,nota)\n",
+    "    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -1064,9 +1120,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ICortex",
    "language": "python",
-   "name": "python3"
+   "name": "icortex"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1078,7 +1134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
