--- a/01-Ramp_Up/02-Python/01-Python/2-Flujos de control/Practica/Ejercicios Flujos de Control.ipynb
+++ b/01-Ramp_Up/02-Python/01-Python/2-Flujos de control/Practica/Ejercicios Flujos de Control.ipynb
@@ -30,10 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Durmiendo\n"
+     ]
+    }
+   ],
+   "source": [
+    "horario=2\n",
+    "if horario<0 or horario>24:\n",
+    "    print(\"Hora del día no válida\")\n",
+    "elif horario >0 or horario <9:\n",
+    "    print(\"Durmiendo\")\n",
+    "elif horario >9 or horario <18:\n",
+    "    print(\"Trabajando\")\n",
+    "elif horario >19 or horario <21:\n",
+    "    print(\"Clase\")\n",
+    "elif horario >22 or horario <=24:\n",
+    "    print(\"Descanso\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -211,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
