--- a/01-Ramp_Up/02-Python/01-Python/2-Flujos de control/Practica/Ejercicios Flujos de Control.ipynb
+++ b/01-Ramp_Up/02-Python/01-Python/2-Flujos de control/Practica/Ejercicios Flujos de Control.ipynb
@@ -45,13 +45,13 @@
     "horario=2\n",
     "if horario<0 or horario>24:\n",
     "    print(\"Hora del día no válida\")\n",
-    "elif horario >0 or horario <9:\n",
+    "elif horario >0 or horario <=9:\n",
     "    print(\"Durmiendo\")\n",
     "elif horario >9 or horario <18:\n",
     "    print(\"Trabajando\")\n",
     "elif horario >19 or horario <21:\n",
     "    print(\"Clase\")\n",
-    "elif horario >22 or horario <=24:\n",
+    "else:\n",
     "    print(\"Descanso\")"
    ]
   },
@@ -76,10 +76,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El precio en el Distrito Retiro de 100 m2 es de 0 euros\n"
+     ]
+    }
+   ],
+   "source": [
+    "superficie=100\n",
+    "distrito=\"Retiro\"\n",
+    "Distritos=[\"Moncloa\",\"Centro\",\"Salamanca\"]\n",
+    "\n",
+    "if distrito in Distritos:\n",
+    "    if distrito in [\"Moncloa\",\"Centro\"] and superficie>100:\n",
+    "        precio=1000\n",
+    "    elif distrito==\"Salamanca\">=150:\n",
+    "        distrito=1500\n",
+    "elif distrito!=\"Retiro\" and (superficie >=60 and superficie<=80):\n",
+    "        precio=600\n",
+    "else:\n",
+    "    precio=0\n",
+    "print(f\"El precio en el distrito {distrito} de {superficie} m2 es de {precio} euros\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,7 +122,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "superficie=100\n",
+    "distrito=\"Retiro\"\n",
+    "Distritos=[\"Moncloa\",\"Centro\",\"Salamanca\"]\n",
+    "if distrito==\"Retiro\":\n",
+    "    print(\"Distrito Retiro\")\n",
+    "    if superficie>100:\n",
+    "        precio=100\n",
+    "    else:\n",
+    "        precio=500\n",
+    "elif distrito in Distritos:\n",
+    "    print()\n",
+    "    if distrito in [\"Moncloa\",\"Centro\"] and superficie>100:\n",
+    "        precio=1000\n",
+    "    elif distrito==\"Salamanca\">=150:\n",
+    "        distrito=1500\n",
+    "elif superficie >=60 and superficie<=80:\n",
+    "        precio=600\n",
+    "else:\n",
+    "    precio=0\n",
+    "print(f\"El precio en el distrito {distrito} de {superficie} m2 es de {precio} euros\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -111,10 +155,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "6\n",
+      "4\n",
+      "8\n",
+      "46\n",
+      "10\n",
+      "12\n"
+     ]
+    }
+   ],
+   "source": [
+    "num=2\n",
+    "lnum=[4,3,2,4,23,5,6]\n",
+    "for n in lnum:\n",
+    "    print(n*num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +189,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-10\n",
+      "-9\n",
+      "-8\n",
+      "-7\n",
+      "-6\n",
+      "-5\n",
+      "-4\n",
+      "-3\n",
+      "-2\n",
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(-10,0,1):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -145,10 +228,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n",
+      "55\n",
+      "75\n",
+      "150\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [12, 15, 32, 42, 55, 75, 122, 132, 150, 180, 200]\n",
+    "for n in list1:\n",
+    "    if n>150:\n",
+    "        break\n",
+    "    elif n%5==0:\n",
+    "        print(n)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -160,10 +261,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[150, 154, 155, 160, 161, 165, 168, 170, 175, 180, 182, 185, 189, 190, 195, 196, 200, 203, 205, 210, 215, 217, 220, 224, 225, 230, 231, 235, 238, 240, 245, 250, 252, 255, 259, 260, 265, 266, 270, 273, 275, 280, 285, 287, 290, 294, 295, 300, 301, 305, 308, 310, 315, 320, 322, 325, 329, 330, 335, 336, 340, 343, 345, 350]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result=list()\n",
+    "for i in range(150,351):\n",
+    "    if i%5==0 or i%7==0:\n",
+    "        result.append(i)     \n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -187,10 +302,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 3 2 1 \n",
+      "4 3 2 1 \n",
+      "3 2 1 \n",
+      "2 1 \n",
+      "1 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5,0,-1):\n",
+    "    for j in range(i,0,-1):\n",
+    "        print(j,end=' ')\n",
+    "    print()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -209,10 +341,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se trata de intentar adivinar un número del 1 al 5. Tienes 2 intentos para acertar\n",
+      "Fallaste. Te quedan 1 intentos. Prueba otra vez...\n",
+      "El número era 5. ¡Perdiste!\n",
+      "Se trata de intentar adivinar un número del 1 al 5. Tienes 2 intentos para acertar\n",
+      "Fallaste. Te quedan 1 intentos. Prueba otra vez...\n",
+      "El número era 5. ¡Perdiste!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "while True:\n",
+    "    num_adv = random.randint(1, 5)\n",
+    "    nvidas = 2\n",
+    "    print(f\"Se trata de intentar adivinar un número del 1 al 5. Tienes {nvidas} intentos para acertar\")\n",
+    "\n",
+    "    while nvidas > 0:\n",
+    "        nusuario = int(input('Acierta el número => '))\n",
+    "        \n",
+    "        if 1 <= nusuario <= 5:\n",
+    "            if num_adv == nusuario:\n",
+    "                print(\"¡Acertaste!\")\n",
+    "                break\n",
+    "            else:\n",
+    "                nvidas -= 1\n",
+    "                if nvidas > 0:\n",
+    "                    print(f\"Fallaste. Te quedan {nvidas} intentos. Prueba otra vez...\")\n",
+    "                else:\n",
+    "                    print(f\"El número era {num_adv}. ¡Perdiste!\")\n",
+    "        else:\n",
+    "            print(\"El número que introdujiste no está comprendido entre 1 y 5\")\n",
+    "   \n",
+    "    continuar = input(\"¿Quieres jugar otra partida? (s/n): \").lower()\n",
+    "    if continuar != \"s\":\n",
+    "        break\n"
+   ]
   }
  ],
  "metadata": {
