--- a/01-Ramp_Up/02-Python/01-Python/2-Flujos de control/Practica/Ejercicios Flujos de Control.ipynb
+++ b/01-Ramp_Up/02-Python/01-Python/2-Flujos de control/Practica/Ejercicios Flujos de Control.ipynb
@@ -261,21 +261,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[150, 154, 155, 160, 161, 165, 168, 170, 175, 180, 182, 185, 189, 190, 195, 196, 200, 203, 205, 210, 215, 217, 220, 224, 225, 230, 231, 235, 238, 240, 245, 250, 252, 255, 259, 260, 265, 266, 270, 273, 275, 280, 285, 287, 290, 294, 295, 300, 301, 305, 308, 310, 315, 320, 322, 325, 329, 330, 335, 336, 340, 343, 345, 350]\n"
+      "[175, 210, 245, 280, 315, 350]\n"
      ]
     }
    ],
    "source": [
     "result=list()\n",
     "for i in range(150,351):\n",
-    "    if i%5==0 or i%7==0:\n",
+    "    if i%5==0 and i%7==0:\n",
     "        result.append(i)     \n",
     "print(result)"
    ]
@@ -377,7 +377,7 @@
     "                if nvidas > 0:\n",
     "                    print(f\"Fallaste. Te quedan {nvidas} intentos. Prueba otra vez...\")\n",
     "                else:\n",
-    "                    print(f\"El número era {num_adv}. ¡Perdiste!\")\n",
+    "                    print(f\"El número era {num_adv}. Perdiste!!\")\n",
     "        else:\n",
     "            print(\"El número que introdujiste no está comprendido entre 1 y 5\")\n",
     "   \n",
