--- a/01-Ramp_Up/02-Python/01-Python/4-Functions/Practica/Ejercicios funciones_RES.ipynb
+++ b/01-Ramp_Up/02-Python/01-Python/4-Functions/Practica/Ejercicios funciones_RES.ipynb
@@ -420,17 +420,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def crear_frase(*palabras):\n",
+    "    return \" \".join(palabras)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a esto es facil'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "crear_frase(\"a\",\"esto\", \"es\", \"facil\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -449,17 +465,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fibonacci(N):\n",
+    "    fib_seq= []\n",
+    "    a, b = 0, 1\n",
+    "\n",
+    "    for i in range(N+1):\n",
+    "        fib_seq.append(a)\n",
+    "        a, b = b, a + b\n",
+    "    \n",
+    "    return fib_seq[-1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fibonacci(4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -478,17 +517,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def areaC(lado:float)->float:\n",
+    "    return lado**2\n",
+    "def areaT(base:float,altura:float)->float:\n",
+    "    return base*altura/2\n",
+    "def areaC(radio:float)->float:\n",
+    "    import math\n",
+    "    return math.pi*radio**2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "638.8185307179587"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2*areaC(10)+areaT(3,7)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "610.6194188748811"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "areaC(10)+areaC(4)+2*areaC(6)+5*areaT(2,4)\n"
+   ]
   },
   {
    "cell_type": "code",
