--- a/01-Ramp_Up/02-Python/02-Ejercicios de repaso/Practice_6_dictionaries.ipynb
+++ b/01-Ramp_Up/02-Python/02-Ejercicios de repaso/Practice_6_dictionaries.ipynb
@@ -42,10 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dicc={5:'val'}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -56,10 +58,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "paises=['España','Portugal','Italia','Francia']\n",
+    "ciudades=['Madrid','Lisboa','Roma','Paris']\n",
+    "lugares=['Puerta de Alcalá', 'Ponte Vasco de Gama',\"Coliseo\",\" Torre Eiffel\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,10 +83,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Madrid': 'Puerta de Alcalá', 'Lisboa': 'Ponte Vasco de Gama', 'Roma': 'Coliseo', 'Paris': ' Torre Eiffel'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Madrid': 'Puerta de Alcalá',\n",
+       " 'Lisboa': 'Ponte Vasco de Gama',\n",
+       " 'Roma': 'Coliseo',\n",
+       " 'Paris': ' Torre Eiffel'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ciudades_lugares=dict(zip(ciudades,lugares))\n",
+    "print(ciudades_lugares)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,10 +121,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Madrid']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print([k for k in ciudades_lugares.keys() if k.startswith(\"M\")])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -105,10 +145,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def mk_dict(lista1,lista2):\n",
+    "    return dict(zip(lista1,lista2))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Madrid': 'Puerta de Alcalá',\n",
+       " 'Lisboa': 'Ponte Vasco de Gama',\n",
+       " 'Roma': 'Coliseo',\n",
+       " 'Paris': ' Torre Eiffel'}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mk_dict(ciudades,lugares)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +193,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "perro=dict()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,10 +209,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nombre': 'Firulais', 'raza': 'Pastor Aleman', 'patas': 4, 'edad': 2}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "perro['nombre'] = 'Firulais'\n",
+    "perro['raza'] = 'Pastor Aleman'\n",
+    "perro['patas']=4\n",
+    "perro['edad'] = 2\n",
+    "\n",
+    "perro"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,10 +241,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nombre_apellido': None,\n",
+       " 'edad': None,\n",
+       " 'habilidades': [],\n",
+       " 'país': None,\n",
+       " 'ciudad': None,\n",
+       " 'dirección': None}"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "claves=['nombre_apellido', 'edad', 'habilidades', 'país', 'ciudad' , 'dirección']\n",
+    "alumno=dict()\n",
+    "for clave in claves:\n",
+    "    if clave =='habilidades':\n",
+    "        alumno[clave]=list()\n",
+    "    else:\n",
+    "        alumno[clave]=None\n",
+    "       \n",
+    "alumno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "alumnos={'alumno1':alumno}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -168,10 +290,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(alumnos['alumno1'].keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alumnos['alumno1'].update({'nota': 10})"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -182,10 +337,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "alumnos['alumno1']['habilidades']=['a','b']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,10 +395,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alumno1': {'nombre_apellido': None,\n",
+       "  'edad': None,\n",
+       "  'habilidades': ['a', 'b'],\n",
+       "  'país': None,\n",
+       "  'ciudad': None,\n",
+       "  'dirección': None}}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alumnos"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -252,10 +427,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('nombre_apellido', None), ('edad', None), ('habilidades', ['a', 'b']), ('país', None), ('ciudad', None), ('dirección', None)])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(alumnos['alumno1'].items())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'alumno1': {'nombre_apellido': None, 'edad': None, 'habilidades': ['a', 'b'], 'país': None, 'ciudad': None, 'dirección': None}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "alumnos\n",
+    "alumnos2=alumnos.copy()\n",
+    "print(alumnos2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'alumno1': {'nombre_apellido': None,\n",
+       "  'edad': None,\n",
+       "  'habilidades': ['a', 'b'],\n",
+       "  'país': None,\n",
+       "  'ciudad': None,\n",
+       "  'dirección': None}}"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alumnos2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': {'c': 2}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict1 = {\"a\": {\"b\": 1}}\n",
+    "dict2 = {\"a\": {\"c\": 2}}\n",
+    "merged_dict = dict1 | dict2\n",
+    "print(merged_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple': 2, 'banana': 2, 'cherry': 1}"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_count={word:words.count(word) for word in words}\n",
+    "word_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "counts1 = defaultdict(int)\n",
+    "counts1[\"apple\"] += 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_dict = {\"a\": 1, \"b\": 2}\n",
+    "value = my_dict.get(\"c\", \"default_value\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -302,7 +594,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
