--- a/01-Ramp_Up/02-Python/02-Ejercicios de repaso/Practice_10_OOP RES.ipynb
+++ b/01-Ramp_Up/02-Python/02-Ejercicios de repaso/Practice_10_OOP RES.ipynb
@@ -280,6 +280,42 @@
     "class User(object):\n",
     "    pass\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista=[1,5,2,9,6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tuple(lista[::-1])[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -298,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
