--- a/Data_Analysis/Anilisis_de_datos/ch_01/2-checking_setup.ipynb
+++ b/Data_Analysis/Anilisis_de_datos/ch_01/2-checking_setup.ipynb
@@ -10,12 +10,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Uso de Python en c:\\Users\\0205301\\OneDrive - SENER\\Documentos\\GitHub\\DS_PT_09_2023\\.venv:\n",
+      "\u001b[42m[ OK ]\u001b[0m Python es la versión 3.11.5 (tags/v3.11.5:cce6ba9, Aug 24 2023, 14:38:34) [MSC v.1936 64 bit (AMD64)]\n",
+      "\n",
+      "\u001b[42m[ OK ]\u001b[0m graphviz\n",
+      "\u001b[42m[ OK ]\u001b[0m ipympl\n",
+      "\u001b[42m[ OK ]\u001b[0m jupyterlab\n",
+      "\u001b[42m[ OK ]\u001b[0m matplotlib\n",
+      "\u001b[42m[ OK ]\u001b[0m pandas\n",
+      "\u001b[42m[ OK ]\u001b[0m requests\n",
+      "\u001b[42m[ OK ]\u001b[0m numpy\n",
+      "\u001b[42m[ OK ]\u001b[0m sklearn\n",
+      "\u001b[42m[ OK ]\u001b[0m scipy\n",
+      "\u001b[42m[ OK ]\u001b[0m seaborn\n",
+      "\u001b[42m[ OK ]\u001b[0m sqlalchemy\n",
+      "\u001b[42m[ OK ]\u001b[0m statsmodels\n",
+      "\u001b[42m[ OK ]\u001b[0m wheel\n",
+      "\u001b[42m[ OK ]\u001b[0m dotenv\n",
+      "\u001b[42m[ OK ]\u001b[0m imblearn\n",
+      "\u001b[42m[ OK ]\u001b[0m login_attempt_simulator\n",
+      "\u001b[42m[ OK ]\u001b[0m ml_utils\n",
+      "\u001b[42m[ OK ]\u001b[0m stock_analysis\n",
+      "\u001b[41m[FAIL]\u001b[0m Data_Analysis//Anilisis_de_datos//visual_aids no instalado.\n"
+     ]
+    }
+   ],
    "source": [
     "from check_environment import run_checks\n",
     "run_checks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Package                   Version\n",
+      "------------------------- ------------\n",
+      "anyio                     4.0.0\n",
+      "argon2-cffi               23.1.0\n",
+      "argon2-cffi-bindings      21.2.0\n",
+      "arrow                     1.3.0\n",
+      "asttokens                 2.4.0\n",
+      "async-lru                 2.0.4\n",
+      "attrs                     23.1.0\n",
+      "Babel                     2.13.1\n",
+      "backcall                  0.2.0\n",
+      "beautifulsoup4            4.12.2\n",
+      "bleach                    6.1.0\n",
+      "certifi                   2023.7.22\n",
+      "cffi                      1.16.0\n",
+      "charset-normalizer        3.3.1\n",
+      "colorama                  0.4.6\n",
+      "comm                      0.1.4\n",
+      "contourpy                 1.1.1\n",
+      "cycler                    0.12.1\n",
+      "debugpy                   1.8.0\n",
+      "decorator                 5.1.1\n",
+      "defusedxml                0.7.1\n",
+      "executing                 2.0.0\n",
+      "fastjsonschema            2.18.1\n",
+      "fonttools                 4.43.1\n",
+      "fqdn                      1.5.1\n",
+      "graphviz                  0.20.1\n",
+      "greenlet                  3.0.1\n",
+      "idna                      3.4\n",
+      "imbalanced-learn          0.11.0\n",
+      "ipykernel                 6.26.0\n",
+      "ipympl                    0.9.3\n",
+      "ipython                   8.16.1\n",
+      "ipython-genutils          0.2.0\n",
+      "ipywidgets                8.1.1\n",
+      "isoduration               20.11.0\n",
+      "jedi                      0.19.1\n",
+      "Jinja2                    3.1.2\n",
+      "joblib                    1.3.2\n",
+      "json5                     0.9.14\n",
+      "jsonpointer               2.4\n",
+      "jsonschema                4.19.1\n",
+      "jsonschema-specifications 2023.7.1\n",
+      "jupyter_client            8.5.0\n",
+      "jupyter_core              5.4.0\n",
+      "jupyter-events            0.8.0\n",
+      "jupyter-lsp               2.2.0\n",
+      "jupyter_server            2.9.1\n",
+      "jupyter_server_terminals  0.4.4\n",
+      "jupyterlab                4.0.7\n",
+      "jupyterlab-pygments       0.2.2\n",
+      "jupyterlab_server         2.25.0\n",
+      "jupyterlab-widgets        3.0.9\n",
+      "kiwisolver                1.4.5\n",
+      "login-attempt-simulator   0.2\n",
+      "lxml                      4.9.3\n",
+      "MarkupSafe                2.1.3\n",
+      "matplotlib                3.8.0\n",
+      "matplotlib-inline         0.1.6\n",
+      "mistune                   3.0.2\n",
+      "ml-utils                  0.2.0\n",
+      "mplfinance                0.12.10b0\n",
+      "nbclient                  0.8.0\n",
+      "nbconvert                 7.9.2\n",
+      "nbformat                  5.9.2\n",
+      "nest-asyncio              1.5.8\n",
+      "notebook_shim             0.2.3\n",
+      "numpy                     1.26.1\n",
+      "overrides                 7.4.0\n",
+      "packaging                 23.2\n",
+      "pandas                    2.1.1\n",
+      "pandas-datareader         0.10.0\n",
+      "pandocfilters             1.5.0\n",
+      "parso                     0.8.3\n",
+      "patsy                     0.5.3\n",
+      "pickleshare               0.7.5\n",
+      "Pillow                    10.1.0\n",
+      "pip                       23.3.1\n",
+      "platformdirs              3.11.0\n",
+      "prometheus-client         0.17.1\n",
+      "prompt-toolkit            3.0.39\n",
+      "psutil                    5.9.6\n",
+      "pure-eval                 0.2.2\n",
+      "pycparser                 2.21\n",
+      "Pygments                  2.16.1\n",
+      "pyparsing                 3.1.1\n",
+      "python-dateutil           2.8.2\n",
+      "python-dotenv             1.0.0\n",
+      "python-json-logger        2.0.7\n",
+      "pytz                      2023.3.post1\n",
+      "pywin32                   306\n",
+      "pywinpty                  2.0.12\n",
+      "PyYAML                    6.0.1\n",
+      "pyzmq                     25.1.1\n",
+      "referencing               0.30.2\n",
+      "requests                  2.31.0\n",
+      "rfc3339-validator         0.1.4\n",
+      "rfc3986-validator         0.1.1\n",
+      "rpds-py                   0.10.6\n",
+      "scikit-learn              1.3.2\n",
+      "scipy                     1.11.3\n",
+      "seaborn                   0.13.0\n",
+      "Send2Trash                1.8.2\n",
+      "setuptools                65.5.0\n",
+      "six                       1.16.0\n",
+      "sniffio                   1.3.0\n",
+      "soupsieve                 2.5\n",
+      "SQLAlchemy                2.0.22\n",
+      "stack-data                0.6.3\n",
+      "statsmodels               0.14.0\n",
+      "stock-analysis            0.2\n",
+      "terminado                 0.17.1\n",
+      "threadpoolctl             3.2.0\n",
+      "tinycss2                  1.2.1\n",
+      "tornado                   6.3.3\n",
+      "traitlets                 5.12.0\n",
+      "types-python-dateutil     2.8.19.14\n",
+      "typing_extensions         4.8.0\n",
+      "tzdata                    2023.3\n",
+      "uri-template              1.3.0\n",
+      "urllib3                   2.0.7\n",
+      "visual-aids               2.0\n",
+      "wcwidth                   0.2.8\n",
+      "webcolors                 1.13\n",
+      "webencodings              0.5.1\n",
+      "websocket-client          1.6.4\n",
+      "wheel                     0.41.2\n",
+      "widgetsnbextension        4.0.9\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip list"
    ]
   },
   {
@@ -58,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
